Corrigido casos de teste, feito refatoração e criado documentação
